backends/chalice/tests/snapshots/test_flash_bert__bert_classification_single.snap
---
source: backends/chalice/tests/test_flash_bert.rs
expression: predictions_single
---
- - 2.8574219
  - -2.9726563
