backends/chalice/tests/snapshots/test_flash_bert__emotions_single.snap
---
source: backends/chalice/tests/test_flash_bert.rs
expression: predictions_single
---
- - -6.546875
  - -6.3007813
  - -4.8671875
  - -3.9589844
  - -4.6328125
  - -6.28125
  - -6.0703125
  - -5.7773438
  - -6.9257813
  - -6.1914063
  - -5.671875
  - -6.1679688
  - -7.5117188
  - -6.8671875
  - -7.1835938
  - -7.1289063
  - -8.2109375
  - -7.015625
  - -7.1328125
  - -8.53125
  - -6.2304688
  - -8.7421875
  - -5.7773438
  - -8.65625
  - -8.2578125
  - -6.6484375
  - -7.40625
  - 3.046875
